Improve configuration and add comprehensive README
- Add separate billing_schema and billing_table variables for cleaner configuration
- Remove string splitting logic from source definitions
- Add comprehensive README with installation, usage, and configuration examples
- Clean up emoji usage throughout documentation
- Better cross-warehouse compatibility with explicit schema/table separation

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -59,8 +59,9 @@ vars:
   
   # AWS-specific configuration
   aws:
-    # Source table
-    billing_table: 'aws_billing.cur_2_0_append_parquet_unified'
+    # Source table configuration
+    billing_schema: 'aws_billing'
+    billing_table: 'cur_2_0_append_parquet_unified'
     
     # Column mappings (defaults from open-finops-stack)
     columns:
